src/c/dynamics.h

/**
 * Build a rotation matrix about the x axis.
 * @param angle Rotation angle in radians.
 * @param r Output 3-by-3 matrix.
 * @param ldr Leading dimension of r.
 */
void c_rotate_x(double angle, double *r, int ldr);
/**
 * Build a rotation matrix about the y axis.
 * @param angle Rotation angle in radians.
 * @param r Output 3-by-3 matrix.
 * @param ldr Leading dimension of r.
 */
void c_rotate_y(double angle, double *r, int ldr);
/**
 * Build a rotation matrix about the z axis.
 * @param angle Rotation angle in radians.
 * @param r Output 3-by-3 matrix.
 * @param ldr Leading dimension of r.
 */
void c_rotate_z(double angle, double *r, int ldr);
/**
 * Build a rotation matrix from three basis vectors.
 * @param i First basis vector.
 * @param j Second basis vector.
 * @param k Third basis vector.
 * @param r Output matrix.
 * @param ldr Leading dimension of r.
 */
void c_rotate(const double i[3], const double j[3], const double k[3], double *r, 
    int ldr);
/**
 * Build an acceleration transformation matrix.
 * @param alpha Angular acceleration.
 * @param omega Angular velocity.
 * @param a Linear acceleration.
 * @param x Position vector.
 * @param r Output matrix.
 * @param ldr Leading dimension of r.
 */
void c_acceleration_transform(const double alpha[3], const double omega[3],
    const double a[3], const double x[3], double *r, int ldr);
/**
 * Build a velocity transformation matrix.
 * @param omega Angular velocity.
 * @param v Linear velocity.
 * @param x Position vector.
 * @param r Output matrix.
 * @param ldr Leading dimension of r.
 */
void c_velocity_transform(const double omega[3], const double v[3], 
    const double x[3], double *r, int ldr);
/**
 * Convert a rotation matrix to angle-axis form.
 * @param r Rotation matrix.
 * @param ldr Leading dimension of r.
 * @param angle Output angle in radians.
 * @param axis Output unit axis.
 */
void c_to_angle_axis(const double *r, int ldr, double *angle, double axis[3]);